amis/services/maintenance-service/service-envoy.yaml
stats_sinks:
  - name: envoy.stat_sinks.statsd
    typed_config:
      "@type": type.googleapis.com/envoy.config.metrics.v3.StatsdSink
      address:
        socket_address:
          address: 172.17.0.1
          port_value: 8125

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 7000

      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                      typed_json_format:
                        start_time: "%START_TIME%"
                        protocol: "%PROTOCOL%"
                        duration: "%DURATION%"
                        request_duration: "%REQUEST_DURATION%"
                        response_duration: "%RESPONSE_DURATION%"
                        bytes_tx: "%BYTES_SENT%"
                        bytes_rx: "%BYTES_RECEIVED%"
                        http_status: "%RESPONSE_CODE%"
                        flags: "%RESPONSE_FLAGS%"
                        upstream_host: "%UPSTREAM_HOST%"
                        upstream_cluster: "%UPSTREAM_CLUSTER%"
                        method: "%REQ(:METHOD)%"
                        route_name: "%ROUTE_NAME%"
                        path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                        upstream_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                        forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                        user_agent: "%REQ(USER-AGENT)%"
                        req_id: "%REQ(X-REQUEST-ID)%"
                        authority: "%REQ(:AUTHORITY)%"
                        response_content_type: "%REQ(CONTENT-TYPE)%"
                stat_prefix: ingress_http
                request_timeout: 3000s
                upgrade_configs:
                  - upgrade_type: websocket
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: fk-service-vh
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: default-service
                            timeout: 3000s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}

    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001

      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                      typed_json_format:
                        start_time: "%START_TIME%"
                        protocol: "%PROTOCOL%"
                        duration: "%DURATION%"
                        request_duration: "%REQUEST_DURATION%"
                        response_duration: "%RESPONSE_DURATION%"
                        bytes_tx: "%BYTES_SENT%"
                        bytes_rx: "%BYTES_RECEIVED%"
                        http_status: "%RESPONSE_CODE%"
                        flags: "%RESPONSE_FLAGS%"
                        upstream_host: "%UPSTREAM_HOST%"
                        upstream_cluster: "%UPSTREAM_CLUSTER%"
                        method: "%REQ(:METHOD)%"
                        route_name: "%ROUTE_NAME%"
                        path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                        upstream_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                        forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                        user_agent: "%REQ(USER-AGENT)%"
                        req_id: "%REQ(X-REQUEST-ID)%"
                        authority: "%REQ(:AUTHORITY)%"
                        response_content_type: "%REQ(CONTENT-TYPE)%"
                stat_prefix: ingress_http
                request_timeout: 3000s
                upgrade_configs:
                  - upgrade_type: websocket
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: fk-service-vh
                      require_tls: EXTERNAL_ONLY
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: default-service
                            timeout: 3000s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}

    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                      typed_json_format:
                        start_time: "%START_TIME%"
                        protocol: "%PROTOCOL%"
                        duration: "%DURATION%"
                        request_duration: "%REQUEST_DURATION%"
                        response_duration: "%RESPONSE_DURATION%"
                        bytes_tx: "%BYTES_SENT%"
                        bytes_rx: "%BYTES_RECEIVED%"
                        http_status: "%RESPONSE_CODE%"
                        flags: "%RESPONSE_FLAGS%"
                        upstream_host: "%UPSTREAM_HOST%"
                        upstream_cluster: "%UPSTREAM_CLUSTER%"
                        method: "%REQ(:METHOD)%"
                        route_name: "%ROUTE_NAME%"
                        path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                        upstream_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                        forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                        user_agent: "%REQ(USER-AGENT)%"
                        req_id: "%REQ(X-REQUEST-ID)%"
                        authority: "%REQ(:AUTHORITY)%"
                        response_content_type: "%REQ(CONTENT-TYPE)%"
                stat_prefix: ingress_http
                request_timeout: 3000s
                upgrade_configs:
                  - upgrade_type: websocket
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: fe-vh
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: default-service
                            timeout: 3000s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}

  clusters:
    - name: default-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: default-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080

admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000

layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              example_listener_name:
                connection_limit: 10000
        overload:
          global_downstream_max_connections: 50000
